k8s/security/network-policy-default-deny.yaml
# This blocks ALL ingress (incoming) and egress (outgoing)
# traffic for every pod in cloudmart-prod namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: cloudmart-prod
spec:
  podSelector: {} # {} means: apply to ALL pods
  policyTypes:
    - Ingress
    - Egress
