k8s/security/notification-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: notification-service-policy
  namespace: cloudmart-prod

spec:
  podSelector:
    matchLabels:
      app: notification-service

  policyTypes:
    - Ingress
    - Egress

  ingress: []

  egress:
    - ports:
        - protocol: TCP
          port: 443 # SQS and SES both use HTTPS (443)
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
