k8s/security/order-egress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: order-egress-policy
  namespace: cloudmart-prod

spec:
  podSelector:
    matchLabels:
      app: order-service

  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: product-service
      ports:
        - protocol: TCP
          port: 8001

    - ports:
        - protocol: TCP
          port: 443

    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
