k8s/security/product-egress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: product-egress-policy
  namespace: cloudmart-prod

spec:
  podSelector:
    matchLabels:
      app: product-service

  policyTypes:
    - Egress

  egress:
    - ports:
        - protocol: UDP
          port: 53

    - ports:
        - protocol: TCP
          port: 443
